--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -38,8 +38,8 @@ nav {
 }
 
 .col-card {
-  border: 1px solid rgba(2, 81, 100, 0.76);
-  box-shadow: 5px 5px 5px rgba(250, 1, 1, 0.911);
+  border: 1px solid rgba(3, 205, 255, 0.76);
+  box-shadow: 5px 5px 5px rgba(1, 200, 250, 0.911);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 50px;
@@ -57,6 +57,11 @@ nav {
 }
 
 .col.saham {
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-title {
   display: flex;
   justify-content: space-around;
 }
