--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -4,31 +4,35 @@ nav {
   z-index: 999;
 }
 .wrapper-main {
-  background: linear-gradient(to bottom right, #113456, #6a1112);
+  background: linear-gradient(to bottom right, #113456, #11335657);
 }
 .card-saya {
   border: 5px solid rgba(4, 205, 255, 0.76);
-  box-shadow: 5px 5px 5px rgba(4, 205, 255, 0.76);
+  box-shadow: 0px 0px 12px 5px rgba(1, 200, 250, 0.911);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 50px;
-  margin-bottom: 3rem;
-  margin-right: 2rem;
-  background-color: rgba(27, 26, 26, 0.685);
+  width: 40rem;
+  min-height: 34rem;
+  background-color: rgb(255, 248, 248);
   height: 460px;
+}
+.card-saya img {
+  margin-top: 15px;
+  margin-bottom: 0;
 }
 
 .bluechips h4 {
-  border: 2px solid rgba(2, 81, 100, 0.76);
-  box-shadow: 5px 5px 5px rgba(4, 175, 218, 0.76);
-  border-top-left-radius: 5px;
+  border: 1px solid rgba(3, 205, 255, 0.76);
+  box-shadow: 0px 0px 12px 5px rgba(1, 200, 250, 0.911);
   border-top-right-radius: 5px;
-  border-bottom-right-radius: 50px;
+  border-top-left-radius: 5px;
   padding-bottom: 2rem;
   padding-top: 2rem;
   padding-left: 2rem;
-  background-color: rgba(27, 26, 26, 0.685);
+  background-color: rgb(255, 248, 248);
   margin-top: 3rem;
+  color: black !important;
 }
 
 .main h1 {
@@ -39,16 +43,14 @@ nav {
 
 .col-card {
   border: 1px solid rgba(3, 205, 255, 0.76);
-  box-shadow: 5px 5px 5px rgba(1, 200, 250, 0.911);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 50px;
-  width: 21rem;
+  box-shadow: 0px 0px 12px 5px rgba(1, 200, 250, 0.911);
+  border-radius: 10%;
+  width: 23rem;
   background-color: rgb(255, 255, 255);
   margin-bottom: 3rem;
   margin-right: 2rem;
   margin-top: 2rem;
-  max-height: 38rem;
+  height: 33rem;
 }
 
 .col-card img {
@@ -64,4 +66,14 @@ nav {
 .modal-title {
   display: flex;
   justify-content: space-around;
+}
+
+.peringkat h4 {
+  margin-top: 0;
+}
+
+table {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 12px 2px rgba(1, 200, 250, 0.911);
+  border-radius: 5px;
 }
