bagusin landing page

--- a/src/pages/LandingPage/landing.css
+++ b/src/pages/LandingPage/landing.css
@@ -1,16 +1,15 @@
-body {
+body,
+html {
   margin: 0;
   height: 100%;
-  width: 100%;
 }
 
 .wrapper {
   background-image: url("../../img/Background.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
-  height: 100vh;
-  width: 100vw;
+  background-position: center center;
+  box-sizing: border-box;
 }
 
 .container img {
