--- a/src/pages/LandingPage/landing.css
+++ b/src/pages/LandingPage/landing.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -10,6 +11,7 @@ html {
   background-repeat: no-repeat;
   background-position: center center;
   box-sizing: border-box;
+  height: 100vh;
 }
 
 .container img {
