--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -3,8 +3,12 @@ nav {
   position: sticky !important;
   z-index: 999;
 }
-.wrapper-main {
-  background: linear-gradient(to bottom right, #113456, #11335657);
+.box {
+  background-image: url("../../img/Background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  height: 100%;
 }
 .card-saya {
   border: 5px solid rgba(4, 205, 255, 0.76);
